# evar

./: ChangeLog.md  README.md  evar.cabal
src/Data/EVar/Type/: EVar_.hs
